--- a/cluster/cluster-a/argo-team-config.yaml
+++ b/cluster/cluster-a/argo-team-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: config-cluster-a
+  name: team-config-cluster-a
 spec:
   project: default
 
