--- a/cluster/base/teams/xfteam1/rolebinding.yaml
+++ b/cluster/base/teams/xfteam1/rolebinding.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: admin
+  name: xfteam1-admin
   namespace: vote-dev
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -15,7 +15,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: admin
+  name: xfteam1-admin
   namespace: vote-test
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -29,7 +29,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: edit
+  name: xfteam1-edit
   namespace: vote-dev
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -46,7 +46,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: edit
+  name: xfteam1-edit
   namespace: vote-test
 roleRef:
   apiGroup: rbac.authorization.k8s.io
