--- a/apps/vote-deploy/dev/vote-api/kustomization.yaml
+++ b/apps/vote-deploy/dev/vote-api/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 namespace: argocd
+nameSuffix: "-dev"
 
 bases:
-  - vote-api/
-  - vote-ui/
+  - ../../base/vote-api
