--- a/apps/vote-deploy/dev/vote-ui/kustomization.yaml
+++ b/apps/vote-deploy/dev/vote-ui/kustomization.yaml
@@ -2,11 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 namespace: argocd
-nameSuffix: "-test"
+nameSuffix: "-dev"
 
 bases:
-  - ../../base
+  - ../../base/vote-ui
 
-patches:
-  - patch-vote-api.yaml
-  - patch-vote-ui.yaml
