--- a/apps/vote-deploy/test/vote-api/kustomization.yaml
+++ b/apps/vote-deploy/test/vote-api/kustomization.yaml
@@ -2,7 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 namespace: argocd
+nameSuffix: "-test"
 
 bases:
-  - vote-api/
-  - vote-ui/
+  - ../../base/vote-api
+
+patches:
+  - patch-vote-api.yaml
