Update argo cluster config

--- a/cluster/cluster-a/teams/argo-team-config.yaml
+++ b/cluster/cluster-a/teams/argo-team-config.yaml
@@ -10,7 +10,7 @@ spec:
     server: 'https://kubernetes.default.svc'
 
   source:
-    path: cluster/cluster-a
+    path: cluster/cluster-a/teams
     repoURL: 'https://github.com/jwennerberg/argocd-openshift.git'
     targetRevision: dev
 
