--- a/cluster/base/operators/kustomization.yaml
+++ b/cluster/base/operators/kustomization.yaml
@@ -2,7 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 bases:
-  - ../../base/teams
-
-resources:
-  - xfteam1/argo-appproject.yaml
+  - openshift-pipelines-operator/
