--- a/cluster/cluster-a/teams/argo-team-config.yaml
+++ b/cluster/cluster-a/teams/argo-team-config.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: team-config-cluster-a
+  namespace: argocd
 spec:
   project: default
 
