--- a/cluster/cluster-a/teams/argo-teams.yaml
+++ b/cluster/cluster-a/teams/argo-teams.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: team-config-cluster-a
+  name: teams-cluster-a
   namespace: argocd
 spec:
   project: default
