--- a/cluster/cluster-b/operators/kustomization.yaml
+++ b/cluster/cluster-b/operators/kustomization.yaml
@@ -3,3 +3,11 @@ kind: Kustomization
 
 bases:
   - ../../base/operators
+
+patchesJson6902:
+- target:
+    group: argoproj.io
+    version: v1alpha1
+    kind: Application
+    name: operators
+  path: patch-argo-app.yaml
