--- a/cluster/base/operators/argo-operators.yaml
+++ b/cluster/base/operators/argo-operators.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: operators-cluster-a
+  name: operators
   namespace: argocd
 spec:
   project: default
@@ -11,7 +11,7 @@ spec:
     server: 'https://kubernetes.default.svc'
 
   source:
-    path: cluster/cluster-a/operators
+    path: cluster/base/operators
     repoURL: 'https://github.com/jwennerberg/argocd-openshift.git'
     targetRevision: dev
 
