--- a/cluster/base/config/kustomization.yaml
+++ b/cluster/base/config/kustomization.yaml
@@ -2,4 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - argocd-consolelink.yaml
+  - project-config.yaml
+  - template-project-request.yaml
+  - consolelink-argocd.yaml
