--- a/apps/vote-ui/k8s/openshift/dev/kustomization.yaml
+++ b/apps/vote-ui/k8s/openshift/dev/kustomization.yaml
@@ -4,5 +4,10 @@ kind: Kustomization
 bases:
   - ../base
 
-patches:
-  - patch-configmap.yaml
+patchesJson6902:
+- path: patch-deploymentconfig.yaml
+  target:
+    group: apps.openshift.io
+    version: v1
+    kind: DeploymentConfig
+    name: ui
