--- a/cluster/base/operators/amq-streams/kustomization.yaml
+++ b/cluster/base/operators/amq-streams/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-  - openshift-pipelines-operator/
-  - amq-streams
+resources:
+  - subscription.yaml
