--- a/argocd/operator/catalogsource.yaml
+++ b/argocd/operator/catalogsource.yaml
@@ -2,6 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: CatalogSource
 metadata:
   name: argocd-catalog
+  namespace: openshift-marketplace
 spec:
   sourceType: grpc
   image: quay.io/jmckind/argocd-operator-registry@sha256:4eed3de69b7322c53a859ed46cab4df7cbd715ad454431346a95f206a07480b5
