--- a/argocd/operator/subscription.yaml
+++ b/argocd/operator/subscription.yaml
@@ -7,4 +7,4 @@ spec:
   channel: alpha
   name: argocd-operator
   source: argocd-catalog
-  sourceNamespace: argocd
+  sourceNamespace: openshift-marketplace
