--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -4,7 +4,27 @@ metadata:
   name: argocd
   namespace: argocd
 spec:
+  server:
+    route: true
   dex:
     image: quay.io/dexidp/dex
     version: v2.22.0
     openShiftOAuth: true
+  rbac:
+    defaultPolicy: ""
+    policy: |
+      g, argocdadmins, role:admin
+
+      p, role:org-user, clusters, get, *, allow
+      p, role:org-user, repositories, get, *, allow
+
+      p, role:xfteam1-admins, applications, *, xfteam1/*, allow
+      p, role:xfteam1-admins, projects, get, xfteam1, allow
+      p, role:xfteam1-users, applications, get, xfteam1/*, allow
+      p, role:xfteam1-users, applications, sync, xfteam1/*, allow
+      p, role:xfteam1-users, projects, get, xfteam1, allow
+
+      g, xfteam1-admins, role:xfteam1-admins
+      g, xfteam1-users, role:xfteam1-users
+      g, xfteam1-users, role:org-user
+    scopes: '[groups]'
